force-app/main/default/objects/Opportunity_Stage_Days__c/Opportunity_Stage_Days__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Opportunity Stage Days</label>
</CustomObject>