force-app/main/default/objects/Opportunity_Stage_Days__c/fields/AcvBatchErrorNotify2UserId__c.field-meta.xml
<CustomField>
    <fullName>AcvBatchErrorNotify2UserId__c</fullName>
    <defaultValue>&quot;0051W000004G35R&quot;</defaultValue>
    <description>OppAcvUpdateBatch will notify any failure error this user.</description>
    <label>ACV batch Error Notify to User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>