force-app/main/default/objects/Opportunity_Stage_Days__c/fields/AllowAcvCalculation__c.field-meta.xml
<CustomField>
    <fullName>AllowAcvCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, Calculate ACV on Opportunity and its products. It also allows Opp Subscription Term (Months) and Total HW+HW Support Amount field calculation.</description>
    <inlineHelpText>If set to true, Calculate ACV on Opportunity and its products.</inlineHelpText>
    <label>Allow  ACV Calculation</label>
    <type>Checkbox</type>
</CustomField>