force-app/main/default/objects/Opportunity_Stage_Days__c/fields/AllowArrCalculation__c.field-meta.xml
<CustomField>
    <fullName>AllowArrCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, Calculate ARR on Opportunity and its products.</description>
    <inlineHelpText>If set to true, Calculate ARR on Opportunity and its products.</inlineHelpText>
    <label>Allow  ARR Calculation</label>
    <type>Checkbox</type>
</CustomField>