force-app/main/default/objects/Opportunity_Stage_Days__c/fields/CCR_Approval_Req_partner_A_c_Ids_CSV__c.field-meta.xml
<CustomField>
    <fullName>CCR_Approval_Req_partner_A_c_Ids_CSV__c</fullName>
    <defaultValue>&quot;0016f00002aqjH6, 0016f00002aqjH6AAI&quot;</defaultValue>
    <description>https://rubrik.atlassian.net/browse/SAL24-468</description>
    <inlineHelpText>CCR Approval Required For partner  A/c Ids (CSV)</inlineHelpText>
    <label>CCR Approval Req partner A/c Ids (CSV)</label>
    <type>TextArea</type>
</CustomField>