force-app/main/default/objects/Opportunity_Stage_Days__c/fields/ccrApprovalRequiredForAccount__c.field-meta.xml
<CustomField>
    <fullName>ccrApprovalRequiredForAccount__c</fullName>
    <defaultValue>&quot;0011W000029xcil, 0011W000029xcilQAA, 0016f00002aqjH6, 0016f00002aqjH6AAI&quot;</defaultValue>
    <description>SAL23-211: &apos;Microsoft Azure Marketplace&apos;, &apos;Google Marketplace&apos;</description>
    <label>CCR Approval Required For A/c Ids (CSV)</label>
    <type>TextArea</type>
</CustomField>