force-app/main/default/objects/Opportunity_Stage_Days__c/fields/Day_of_Quarter_for_Close_Date_Extend__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Quarter_for_Close_Date_Extend__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Pre-existing Stage “1 Discovery” Opportunity is not created in the quarter, and today have 14th day of the current Quarter, system will update the close date by adding 90 days to the current Opportunity close date.</description>
    <label>Day of Quarter for Close Date Extend</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>