force-app/main/default/objects/Opportunity_Stage_Days__c/fields/DefaultAcvAmount__c.field-meta.xml
<CustomField>
    <fullName>DefaultAcvAmount__c</fullName>
    <defaultValue>80</defaultValue>
    <description>Default % of Amount field on Opportunity goes to ACV amount.</description>
    <inlineHelpText>Default % of Amount field on Opportunity goes to ACV amount.</inlineHelpText>
    <label>Default ACV Amount %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>