force-app/main/default/objects/Opportunity_Stage_Days__c/fields/DefaultHW_HW_Support__c.field-meta.xml
<CustomField>
    <fullName>DefaultHW_HW_Support__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Default % of Amount field on Opportunity goes to H/W &amp; H/ W Support amount.</description>
    <inlineHelpText>Default % of Amount field on Opportunity goes to H/W &amp; H/ W Support % amount.</inlineHelpText>
    <label>Default H/W &amp; H/ W Support %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>