force-app/main/default/objects/Opportunity_Stage_Days__c/fields/DefaultSubscriptionTermMonths__c.field-meta.xml
<CustomField>
    <fullName>DefaultSubscriptionTermMonths__c</fullName>
    <defaultValue>36</defaultValue>
    <description>Default Subscription Term Months on Opportunity used in ACV amount calculation.</description>
    <inlineHelpText>Default Subscription Term Months on Opportunity used in ACV amount calculation.</inlineHelpText>
    <label>Default Subscription Term Months</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>