force-app/main/default/objects/Opportunity_Stage_Days__c/fields/DefaultSubscriptionTermMonthsARR__c.field-meta.xml
<CustomField>
    <fullName>DefaultSubscriptionTermMonthsARR__c</fullName>
    <defaultValue>39</defaultValue>
    <label>Default Subscription Term Months for ARR</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>