force-app/main/default/objects/Opportunity_Stage_Days__c/fields/DefaultSubscriptionTermMonthsRenewARR__c.field-meta.xml
<CustomField>
    <fullName>DefaultSubscriptionTermMonthsRenewARR__c</fullName>
    <defaultValue>14</defaultValue>
    <label>Default Subscription Term Months RenwARR</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>