force-app/main/default/objects/Opportunity_Stage_Days__c/fields/Disable_Closed_Lost_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Disable_Closed_Lost_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL23-658 - Stage 1 Automation - Move the Opportunity to Lost Reason - &quot;No AE Activity &quot; and send an email alert 5 days before (85th day) - Set True to disable this email alert.</description>
    <label>Disable Closed Lost Email Alert</label>
    <type>Checkbox</type>
</CustomField>