force-app/main/default/objects/Opportunity_Stage_Days__c/fields/Ignore_Alert_for_Ac_Territory_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Alert_for_Ac_Territory_Hierarchy__c</fullName>
    <defaultValue>&quot;0056f00000AzgeLAAR, 0056f00000AzgeL&quot;</defaultValue>
    <description>SAL23-373: Ignore Alert for A/c Territory Hierarchy for particular A/Cs (In CSV format)</description>
    <label>Ignore Alert for A/c Territory Hierarchy</label>
    <type>TextArea</type>
</CustomField>