force-app/main/default/objects/Opportunity_Stage_Days__c/fields/Max_Days_for_Stage_0__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_for_Stage_0__c</fullName>
    <defaultValue>730</defaultValue>
    <description>Once an Opportunity has been at stage 0 Nurture for 24 months (stage duration) the system should automatically change the stage to “7 Closed Lost”</description>
    <label>Max Days for Stage 0</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>