force-app/main/default/objects/Opportunity_Stage_Days__c/fields/Max_Days_for_Stage_1__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_for_Stage_1__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Opportunity sits at Stage 1 for 60 days (stage duration) the system should move the Opportunity back to stage “0 Nurture&quot;</description>
    <label>Max Days for Stage 1</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>