force-app/main/default/objects/Opportunity_Stage_Days__c/fields/Max_Days_for_Stage_2__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_for_Stage_2__c</fullName>
    <defaultValue>14</defaultValue>
    <description>If Opportunity sits in Stage 2 for more than 14 days, and  does not mark “Stage 2 RSM Validation” checkbox as TRUE, change the Opportunity Stage back to “1 Discovery.”</description>
    <label>Max Days for Stage 2</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>