force-app/main/default/objects/Opportunity_Stage_Days__c/fields/Max_Days_To_Move_Stg1_To_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_To_Move_Stg1_To_Closed_Lost__c</fullName>
    <defaultValue>90</defaultValue>
    <description>SAL23-658 - Stage 1 Automation - Move the Opportunity to Lost Reason - &quot;No AE Activity &quot;</description>
    <label>Max Days To Move Stg1 To Closed Lost</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>