force-app/main/default/objects/Opportunity_Stage_Days__c/fields/Max_Days_To_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_To_Send_Email__c</fullName>
    <defaultValue>85</defaultValue>
    <description>SAL23-658 - Stage 1 Automation - Move the Opportunity to Lost Reason - &quot;No AE Activity &quot; and send an email alert 5 days before (85th day)</description>
    <label>Max Days To Send Email</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>