force-app/main/default/objects/Opportunity_Stage_Days__c/fields/OpportunityStageDownGradeBatch_Size__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStageDownGradeBatch_Size__c</fullName>
    <defaultValue>100</defaultValue>
    <label>OpportunityStageDownGradeBatch Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>