force-app/main/default/objects/Opportunity_Stage_Days__c/fields/Stage_Change_Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Change_Cut_Off_Date__c</fullName>
    <defaultValue>DateValue(&quot;2020-06-22&quot;)</defaultValue>
    <inlineHelpText>If Stage changed on or later of this date, batch will start it monitoring and downgrade it if criteria matched.</inlineHelpText>
    <label>Stage Change Cut-Off Date</label>
    <type>Date</type>
</CustomField>